# bartholomew-smith

./: .bartholomew.yaml  .deepsource.toml  .gitignore  LICENSE  README.md  app.py  auto_approve  config.py  docker-compose.yml  pull-request.md  pyproject.toml  requirements.dev.txt  requirements.txt  sonar-project.properties  vercel.json
.github/workflows/: code_quality.yml  publish.yml
.old_tests/: conftest.py
helper/: request.py
src/: app.py  pull_request_handler.py  services.py
src/handlers/: create_pull_request.py  release.py
src/helpers/: command.py  command_helper.py  db_helper.py  exception_helper.py  issue.py  issue_helper.py  pull_request.py  pull_request_helper.py  release.py  release_helper.py  repository.py  repository_helper.py  request_helper.py  text_helper.py
src/managers/: issue.py  issue_manager.py  pull_request.py  pull_request_manager.py  release.py  release_manager.py  tasklist_workflow.md
src/models/: __init__.py  issue_job.py  job.py
src/services/: __init__.py  issue_job_service.py  job_service.py
templates/: index.html
tests/: conftest.py  test_app.py  test_create_pull_request.py  test_handle_issue.py  test_handle_issue_closed.py
tests/events/: test_check_suite_requested_event.py
tests/handlers/: test_create_pull_request.py  test_pull_request.py  test_release.py
tests/helpers/: conftest.py  test_command_helper.py  test_exception_helper.py  test_issue.py  test_issue_helper.py  test_pull_request.py  test_pull_request_helper.py  test_release.py  test_release_helper.py  test_repository_helper.py  test_request_helper.py  test_text_helper.py
tests/managers/: old_test_pull_request_manager.py  test_issue.py  test_issue_manager.py  test_pull_request.py  test_pull_request_manager.py  test_release.py  test_release_manager.py
tests/managers/pull_request_manager/: __init__.py  test_auto_update_pull_requests.py  test_create_pull_request.py  test_enable_auto_merge.py  (+1 more)
(+1 files in other folders)
