[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Bartholomew \"The Butler\" Smith"
authors = [
    { name="Heitor Luis Polidoro" },
]
description = "Package to help creates Github Apps."
readme = "README.md"
requires-python = ">=3.9"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/heitorpolidoro/bartholomew-smith"

[tool.setuptools.dynamic]
version = {attr = ".__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "db_helper.py",
]
relative_files = true

[tool.black]
line_length = 120

[tool.pylint]
max-line-length = 120

[tool.mypy]
exclude = "tests/*"
